fix timeline on smaller screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,9 @@
 html{
   --line-color: #e5e7eb;
 }
+html, body {
+  overflow-x:hidden 
+} 
 html.dark {
   --line-color: rgba(255, 255, 255, 0.2);
 }
